@@ -1,3 +1,5 @@
+- fix Makefile.PL by including PDL::LinearAlgebra find_libs func
+
 0.28 2023-01-06
 - no changes from 0.27_01
 
